<resources>
    <string name="app_name">SMAI KEPANJEN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nama Siswa</string>
    <string name="nav_header_subtitle">NIS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ujian">Ujian</string>
    <string name="menu_bank_soal">Bank Soal</string>
    <string name="menu_hasil_ujian">Hasil Ujian</string>
    <string name="menu_materi">Materi</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
